Füge eine Link für Open in eingefügt

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -11,6 +11,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "::: {.content-visible when-format=\"html\"}\n",
+    "\n",
+    "::: {.callout-tip}\n",
+    "\n",
+    "## Notebook interaktiv ausführen\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SkriptenMk/I_fP_24-28/blob/main/files/demo.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SkriptenMk/I_fP_24-28/main?labpath=files/demo.ipynb)\n",
+    "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/SkriptenMk/I_fP_24-28/blob/main/files/demo.ipynb)\n",
+    "\n",
+    ":::\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "MGnKRTNgRLvZ"
    },
