--- a/index.ipynb
+++ b/index.ipynb
@@ -13,18 +13,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "::: {.content-visible when-format=\"html\"}\n",
-    "\n",
-    "::: {.callout-tip}\n",
-    "\n",
     "## Notebook interaktiv ausführen\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SkriptenMk/jupyter-demo/blob/main/demo.ipynb)\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SkriptenMk/jupyter-demo/main?labpath=files/demo.ipynb)\n",
-    "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/SkriptenMk/jupyter-demo/blob/main/demo.ipynb)\n",
     "\n",
-    ":::\n",
-    "\n",
-    ":::"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SkriptenMk/jupyter-demo/blob/main/index.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SkriptenMk/jupyter-demo/main?labpath=files/index.ipynb)\n",
+    "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/SkriptenMk/jupyter-demo/blob/main/index.ipynb)"
    ]
   },
   {
