--- a/index.ipynb
+++ b/index.ipynb
@@ -16,7 +16,7 @@
     "## Notebook interaktiv ausführen\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SkriptenMk/jupyter-demo/blob/main/index.ipynb)\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SkriptenMk/jupyter-demo/main?labpath=files/index.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SkriptenMk/jupyter-demo/blob/main/index.ipynb)\n",
     "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/SkriptenMk/jupyter-demo/blob/main/index.ipynb)"
    ]
   },
