Ergänze den Quelltext für die LaTeX Formel

--- a/index.ipynb
+++ b/index.ipynb
@@ -377,8 +377,16 @@
     "Um des Beispiels willen, wird hier eine Funktion für den Satz des Pythagoras implementiert. Dies dient auch als Möglichkeit, zu zeigen, wie in Markdown Fromeln geschrieben werden können (mit der [LaTeX Syntax](https://en.wikibooks.org/wiki/LaTeX/Mathematics)).\n",
     "\n",
     "$$\n",
-    "c = \\sqrt{(a^2 + b^2)}\n",
+    "c = \\sqrt{a^2 + b^2}\n",
     "$$\n",
+    "\n",
+    "Die hier dargestellte Formel im LaTeX Quelltext:\n",
+    "\n",
+    "```latex\n",
+    "$$\n",
+    "c = \\sqrt{a^2 + b^2}\n",
+    "$$\n",
+    "```\n",
     "\n",
     "In der folgenden Zelle wird diese Formel in einer Funktion implementiert."
    ]
