Formuliere eine Erläuterung zu den Online Notebooks

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,11 +13,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebook interaktiv ausführen\n",
+    "## Notebook online ausführen\n",
+    "\n",
+    "Grundsätzlich können Jupyter Notebooks lokal auf dem eigenen Rechner\n",
+    "bearbeitet werden. Um den Installationsaufwand für diese Demonstration\n",
+    "zu umgehen, stehen hier drei Möglichkeiten zur Verfügung, das\n",
+    "Beispielnotebook online zu bearbeiten.\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SkriptenMk/jupyter-demo/blob/main/index.ipynb)\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SkriptenMk/jupyter-demo/main?labpath=index.ipynb)\n",
     "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/SkriptenMk/jupyter-demo/blob/main/index.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Was ein Jupyter Notebook auszeichnet"
    ]
   },
   {
