Setze einen Link auf das Hilfsscript

--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,9 @@
     "Es gibt ganz unterschiedliche Varianten einen Pandas DataFrame zu\n",
     "erstellen. Damit hier keine Daten konstruiert werden müssen, wurde im\n",
     "Vorfeld eine Datei mit den Längen der Tage in Winterthur im Jahr 2024\n",
-    "erstellt. Die Datei heisst [`data.csv`](data.csv). \n",
+    "erstellt. Die Datei heisst [`data.csv`](data.csv). Die Datei wurde mit\n",
+    "einem [Python Script](daylight.py) unter verwendung der Library 'astral'\n",
+    "erstellt. \n",
     "\n",
     "Damit ein Pandas DataFrame erstellt werden kann, muss als erstes die\n",
     "Pandas Library importiert werden. Um die von dieser Library zur\n",
