--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,15 @@
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SkriptenMk/jupyter-demo/blob/main/index.ipynb)\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/SkriptenMk/jupyter-demo/main?labpath=index.ipynb)\n",
-    "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/SkriptenMk/jupyter-demo/blob/main/index.ipynb)"
+    "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/SkriptenMk/jupyter-demo/blob/main/index.ipynb)\n",
+    "\n",
+    "Allen, welche gerne auf dem eigenen Rechner weiterarbeiten wollen, seien\n",
+    "die beiden Anleitungen empfohlen:\n",
+    "\n",
+    "* [Anaconda](https://www.anaconda.com/download): Die komfortable\n",
+    "  Gesamtlösung. Allerdings ist der Speicherplatzbedarf relativ hoch.\n",
+    "* [Direktinstallation](https://jupyter.org/install) (via venv und pip): Eine massgeschneiderte Lösung. Allerdings\n",
+    "  erfordert diese Installation Arbeiten im Terminal."
    ]
   },
   {
